--- a/.editorconfig
+++ b/.editorconfig
@@ -12,5 +12,5 @@ insert_final_newline = true
 [*.js]
 indent_size = 4
 
-# [*.md]
-# trim_trailing_whitespace = false
+[*.md]
+trim_trailing_whitespace = false
