--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ timezone: Asia/Shanghai
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Yu Mengchi's blog                          # the main title
+title: 余孟池的个人博客                          # the main title
 
-tagline:  技术 生活    # it will display as the sub-title
+tagline:      # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   面试总结，技术文章
