--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ timezone: Asia/Shanghai
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: 余孟池的个人博客                          # the main title
+title: 余孟池|个人博客                          # the main title
 
 tagline:      # it will display as the sub-title
 
